--- a/styles.css
+++ b/styles.css
@@ -9,11 +9,10 @@
     --fonte-primaria: 'Krona One', sans-serif;
     --fonte-secundaria: 'Montserrat', sans-serif
 }
-/* Estilo básico para cabeçalho */
 
 body {
     margin: 0;
-    padding: 0; /* ajuste esse css para que os botons fiquem menores, o mapa seja em miniatura */
+    padding: 0;
     font-family: var(--fonte-secundaria);
 }
 
@@ -21,33 +20,33 @@ header {
     position: relative;
     text-align: center;
     color: black;
-    padding: 0; /* Diminuindo o padding para encolher a altura do cabeçalho */
-    min-height: 10vh; /* Ajuste para menor altura do cabeçalho */
-    overflow: hidden; /* Garante que o conteúdo não extrapole o header */
+    padding: 0;
+    min-height: 10vh;
+    overflow: hidden;
     font-family: var(--fonte-secundaria);
 }
 
 #header-logo {
-    max-width: 100%; /* Ajuste do tamanho do logo para 30% da largura */
-    height: auto; /* Mantém a proporção da imagem */
+    max-width: 100%;
+    height: auto;
     margin: 0 auto;
-    display: block; /* Centraliza a imagem horizontalmente */
-    position: relative; /* Para que a imagem fique acima do fundo */
-    z-index: 1; /* Coloca a imagem acima do fundo */
+    display: block;
+    position: relative;
+    z-index: 1;
 }
 
 h1, p {
     position: relative;
-    z-index: 1; /* Coloca o texto acima do fundo */
+    z-index: 1;
     font-family: var(--fonte-primaria);
 }
 
 h1 {
-    font-size: 2vw; /* Tamanho da fonte proporcional à largura da tela */
+    font-size: 2vw;
 }
 
 p {
-    font-size: 1.2vw; /* Tamanho da fonte proporcional à largura da tela */
+    font-size: 1.2vw;
 }
 
 #mapa, #relatos {
@@ -61,13 +60,12 @@ form label {
     display: block;
 }
 
-/* Ajuste todos os campos de entrada, textarea, select, e botão */
 form input, form textarea, form select {
-    width: 100%; /* Certifique-se de que todos os campos ocupam 100% da largura */
+    width: 100%;
     padding: 0.5rem;
     margin-top: 0.5rem;
-    border: 1px solid #ccc; /* Adiciona uma borda padrão para todos os campos */
-    border-radius: 5px; /* Borda arredondada */
+    border: 1px solid #ccc;
+    border-radius: 5px;
     font-family: var(--fonte-secundaria);
 }
 
@@ -86,11 +84,11 @@ button {
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    padding: 0.5rem 1rem; /* Tamanho do botão */
+    padding: 0.5rem 1rem;
     margin-top: 1rem;
-    display: block; /* Garante que o botão fique centralizado */
-    margin-left: auto; /* Alinha à direita */
-    margin-right: auto; /* Alinha à esquerda */
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     font-family: var(--fonte-secundaria);
 }
 
@@ -103,7 +101,7 @@ button:hover {
 }
 
 .selecionar__opcao select {
-    width: 100%; /* Assegura que o select ocupe 100% da largura */
+    width: 100%;
     padding: 10px;
     border: 1px solid #000000;
     border-radius: 5px;
@@ -121,7 +119,7 @@ button:hover {
 
 @media (max-width: 768px) {
     #map {
-        height: 40vh; /* Diminui a altura do mapa em telas menores */
+        height: 40vh;
     }
 
     header {
@@ -129,7 +127,7 @@ button:hover {
     }
 
     h1 {
-        font-size: 24px; /* Tamanho de fonte menor */
+        font-size: 24px;
     }
 
     #relatos {
@@ -139,7 +137,7 @@ button:hover {
 
 @media (max-width: 480px) {
     #map {
-        height: 30vh; /* Diminui ainda mais a altura do mapa em telas pequenas */
+        height: 30vh;
     }
 
     header {
@@ -147,10 +145,10 @@ button:hover {
     }
 
     h1 {
-        font-size: 20px; /* Tamanho de fonte ainda menor */
+        font-size: 20px;
     }
 
     button {
-        padding: 8px 12px; /* Tamanho do botão menor */
+        padding: 8px 12px;
     }
 }
